--- a/WebContent/UsuarioSis.xhtml
+++ b/WebContent/UsuarioSis.xhtml
@@ -53,7 +53,8 @@
 				</h:selectOneMenu>
 				
 				
-				<h:commandButton value="Cadastrar"/>
+				<h:commandButton value="Cadastrar" action="#{usuarioBeam.cadastrar}""/>
+				<h:commandButton value="Voltar" action=""/>
 			</h:panelGrid>
 		</h:form>
 	</h:body>
