--- a/WebContent/Login.xhtml
+++ b/WebContent/Login.xhtml
@@ -14,6 +14,10 @@
 </h:head>
 
 <h:body>
+<div  class="header">
+		 			
+		 
+ </div><!-- Fim do head-->
 		 <div id="login-dialog">
 		 	<h1 align="center">Acesso</h1>
 					  <h:form  id="frm">		
@@ -32,7 +36,7 @@
 		
 		 <div  class="footer">
 		 
-		 <p>Copyright 2003 - 2016 NextIp | Todos os Direitos Reservados</p>
+		 <p>Copyright 2016 - 2016 Dreaming Software | Todos os Direitos Reservados</p>
 		 
 		 </div><!-- Fim do rodape -->
 
