--- a/WebContent/Login.xhtml
+++ b/WebContent/Login.xhtml
@@ -41,7 +41,7 @@
 		
 		 <div  class="footer">
 		 
-		 <p>Copyright 2016 - 2016 Dreaming Software | Todos os Direitos Reservados</p>
+		 <p align="center">Copyright 2016 - 2016 Dreaming Software | Todos os Direitos Reservados</p>
 		 
 		 </div><!-- Fim do rodape -->
 
